--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 					<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
 						data-scrollax-parent="true">
 						<div class="one-third js-fullheight order-md-last img"
-							style="background-image:url(images/rusumimg.jfif);">
+							style="background-image:url(images/Rusum_image.jpg);">
 							<div class="overlay"></div>
 						</div>
 						<div class="one-forth d-flex  align-items-center ftco-animate"
@@ -216,7 +216,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 										<div class="about-img">
-											<img src="images/rusumimg.jfif" class="img-fluid rounded b-shadow-a" alt="">
+											<img src="images/Rusum_image.jpg" class="img-fluid rounded b-shadow-a" alt="">
 										</div>
 									</div>
 									<!-- Details next to profile image -->
@@ -232,28 +232,28 @@
 
 								<div class="skill-mf">
 									<p class="title-s">Skills</p>
-									<span>MongoDB</span> <span class="pull-right">75%</span>
+									<span>MongoDB</span> <span class="pull-right">50%</span>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 75%;"
-											aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" style="width: 50%;"
+											aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 
-									<span>HTML</span> <span class="pull-right">85%</span>
+									<span>HTML</span> <span class="pull-right">80%</span>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 85%"
-											aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" style="width: 80%"
+											aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 
-									<span>CSS</span> <span class="pull-right">60%</span>
+									<span>CSS</span> <span class="pull-right">70%</span>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 60%"
-											aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" style="width: 70%"
+											aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 
-									<span>JavaScript</span> <span class="pull-right">75%</span>
+									<span>JavaScript</span> <span class="pull-right">50%</span>
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 75%"
-											aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+										<div class="progress-bar" role="progressbar" style="width: 50%"
+											aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 
 									<span>Java Programming</span> <span class="pull-right">50%</span>
@@ -273,7 +273,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 
-								<p>Full-stack developer with a passion for building innovative and user-friendly web
+								<p>Web developer with a passion for building innovative and user-friendly web
 									applications. Proven ability to work independently and as
 									part of a team, to meet deadlines under pressure. Seeking a position where I can
 									apply my skills and knowledge to make a real impact.</p>
@@ -285,7 +285,7 @@
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
 
 									<li class="d-flex"><span>Other Skills:</span> <span>HTML, CSS,
-											JavaScript,React,&amp; SQL</span></li>
+											JavaScript,React,&amp; MongoDB</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Sketching &
 											Drawing</span></li>
 
